# FastViewGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.ps1
configs/: config.yaml  partitioning.yaml  simpletest.yaml  size_config.yaml
core/include/: GdalCommon.h  ImageProcessor.h  Logger.h  Reader.h  Satellite.h  Stretch.h
core/src/: Logger.cpp  Reader.cpp  Satellite.cpp  Stretch.cpp  main.cpp  partitioner.cpp  size_gener.cpp
docs/: index.html
